--- a/package.json
+++ b/package.json
@@ -4,19 +4,20 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/pro-components": "^2.8.6",
+    "@refinedev/antd": "^5.44.0",
     "@refinedev/cli": "^2.16.21",
     "@refinedev/core": "^4.47.1",
     "@refinedev/devtools": "^1.1.32",
     "@refinedev/kbar": "^1.3.6",
+    "@refinedev/react-router": "^1.0.0",
+    "@refinedev/simple-rest": "^5.0.1",
+    "@uiw/react-md-editor": "^3.19.5",
+    "antd": "^5.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router": "^7.0.2",
-    "@refinedev/simple-rest": "^5.0.1",
-    "@refinedev/antd": "^5.44.0",
-    "antd": "^5.17.0",
-    "@ant-design/icons": "^5.5.1",
-    "@uiw/react-md-editor": "^3.19.5",
-    "@refinedev/react-router": "^1.0.0"
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@types/node": "^18.16.2",
@@ -28,6 +29,7 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "sass": "^1.85.1",
     "typescript": "^5.4.2",
     "vite": "^4.3.1"
   },
