--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@refinedev/react-router": "^1.0.0",
     "@refinedev/simple-rest": "^5.0.1",
     "@uiw/react-md-editor": "^3.19.5",
+    "dayjs": "^1.11.12",
     "antd": "^5.17.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -27,6 +28,9 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "eslint": "^8.38.0",
+    "prettier": "^3.3.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "sass": "^1.85.1",
