--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@refinedev/react-router": "^1.0.0",
     "@refinedev/simple-rest": "^5.0.1",
     "@uiw/react-md-editor": "^3.19.5",
+    "object-to-formdata": "^4.5.1",
     "dayjs": "^1.11.12",
     "antd": "^5.17.0",
     "react": "^18.0.0",
